 * Don't allow multiple custom shortcuts for one action. This is also a workaround for Qt's Meta key bug, that treats Meta like a non-modifier.
 * Basic Hurd support.
 * Don't let the current item change during a tree DND.
 * Drag a tree node only if there is a real mouse movement (and not when the view is scrolled by the wheel of a motionless mouse).

V0.4.6
---------
 * Removed an old workaround for KDE's clipboard.
 * Use C++11 raw string literals (thanks to shlyakpavel at GitHub).
 * Set the point size of the default document font to that of the widget font.
 * No focus for search buttons.
 * Many (similar) fixes in searching, replacing, printing and exporting.
 * Dropped QDesktopWidget.
 * Don't auto-save deleted files.
 * Allow compilation without X11.
 * macOS support by shlyakpavel at GitHub.
 * Fixed pasting of images into the doc.
 * Fixed DND with an image without extension.
 * Added an option for small toolbar icon size.
 * Separated the preferences code for adding new options more easily.
 * Update settings when the Preferences dialog is shown (because settings may have been changed in another FeatherNotes window).
 * Allow opening docs by DND.
 * Added a magic string to `text/feathernotes-fnx` but the extension has priority.

V0.4.5
---------
 * Added some text-editor shortcuts of FeatherPad.
 * Auto-bracketing support.
 * Better text tabulation.
 * Translation support.
 * Added SVG symbolic icons (that change color to have high contrast with their backgrounds) and removed system icon support because some important icons may not be found in system themes.
 * Support node icons.
 * First try "gio" for opening hyperlinks because Qt may resort to "xdg-open", which isn't a good choice sometimes.
 * Polish translation and a fix by Marcin Mikołajczak (m4sk1n at GitHub).
 * Added a workaround for a new bug in KDE's file dialog, which doesn't change directory with selectFile().
 * Wayland support.

V0.4.4
---------